# sway-control-panel

./: LICENSE  README.md  meson.build
include/: about.h  config.h.in  gtk_control.h  icon_preview.h  keybinding_view.h  log.h  main_window.h  sway_config.h  theme_view.h  util.h
resources/: gresource.xml  sway-control-panel.desktop.in
resources/ui/: main_window.glade  main_window.glade~
src/: config.cpp  gtk_control.cpp  main.cpp  main_window.cpp
